@@ -1,5 +1,10 @@
 Tue Oct 27 17:54:00 EST 1998 Daniel Veillard <Daniel.Veillard@w3.org>
 
+	* tree.c: corrected a small bug
+	* doc/xml.html: continuing writing documentation.
+
+Tue Oct 27 17:54:00 EST 1998 Daniel Veillard <Daniel.Veillard@w3.org>
+
 	* debugXML.h debugXML.c: added debugging utilities.
 	* tester.c: added --debug switch.
 	* tree.c: patched an incorrect node->type assignment.
